--- a/style.css
+++ b/style.css
@@ -125,6 +125,12 @@ body {
     padding: 50px 0 0 0;
 }
 
+
+/* .header-navigation {
+    position: fixed;
+    width: 100%;
+} */
+
 .intro {
     display: flex;
     justify-content: space-between;
@@ -134,13 +140,17 @@ body {
 
 .menu {
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
     flex-wrap: wrap;
 }
 
+.menu2 {
+    justify-content: center;
+}
+
 .menu-link {
-    padding: 10px 16px;
+    padding: 10px 14px;
     color: var(--pure-white);
     font-size: 16px;
     line-height: 15px;
@@ -149,7 +159,7 @@ body {
 }
 
 .menu-link:hover {
-    padding: 29.5px 16px;
+    padding: 29.5px 14px;
     background-color: var(--accent-light);
     transition: background-color 0.4s;
 }
@@ -256,4 +266,51 @@ body {
 
 .contact p {
     padding: 20px 0 0 0;
+}
+
+.portfolio-menu {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
+}
+
+.portfolio-menu-item {
+    border-radius: 10px;
+    /* background-color: var(--accent-light); */
+    text-align: center;
+    padding-bottom: 15px;
+    border: 2px solid var(--pure-white);
+    overflow: hidden;
+}
+
+.item-img {
+    width: 100%;
+    height: 250px;
+    object-fit: cover;
+}
+
+.item-title {
+    padding-top: 1em;
+    margin-bottom: 2em;
+    font-size: 16px;
+    color: var(--pure-white);
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.item-link {
+    display: inline-block;
+    padding: 10px 30px;
+    border-radius: 4px;
+    color: var(--accent);
+    background-color: var(--pure-white);
+    border: 2px solid var(--pure-white);
+    font-weight: 600;
+}
+
+.item-link:hover {
+    color: var(--pure-white);
+    background-color: var(--accent);
+    border: 2px solid var(--pure-white);
+    font-weight: 600;
 }
